--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>sara</title>
   </head>
   <body>
+    <h1>sallam man sara hastam</h1>
     <script src="script.js"></script>
   </body>
 </html>
