--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>sallam man sara hastam</h1>
+    <h2>sallam 2</h2>
     <script src="script.js"></script>
   </body>
 </html>
