--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <h1>sallam man sara hastam</h1>
     <h2>sallam 2</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel soluta minus
+      perferendis corporis, illum doloremque deleniti accusamus ea iste
+      accusantium.
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
