--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       perferendis corporis, illum doloremque deleniti accusamus ea iste
       accusantium.
     </p>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, voluptate!
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
