--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>sallam man sara hastam</h1>
     <h2>sallam 2</h2>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, voluptate!
+    </p>
     <script src="script.js"></script>
   </body>
 </html>
