add sara to new 2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, voluptate!
     </p>
+    <a href="#">sara</a>
     <script src="script.js"></script>
   </body>
 </html>
